--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block menu %}
+    <li class="menu"><a href='/forum' class="menu">Forum</a></li>
+{% endblock %}
+
 {% block body %}
-    <h1 align="center">Welcome to the Djangle</h1>
+    <h1 align="center" class="container">Welcome to the Djangle</h1>
 {% endblock %}
