fixed unexpected underline in title

--- a/djangle/static/djangle/style.css
+++ b/djangle/static/djangle/style.css
@@ -66,6 +66,10 @@ header {
     -webkit-margin-after: 0;
 }
 
+#alogo:hover{
+	text-decoration: none;
+}
+
 #logo{
     width: 45px;
     height: 45px;
