--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <div id="top">
             <div id="header-left">
                 <h1 id="header-title">
-                    <a href="/">
+                    <a href="/" id="alogo">
                         <img src="{% static 'djangle/images/Djangle_logo.png'%}" alt="Djangle logo" id="logo">
                         <img src="{% static 'djangle/images/Djangle_text.png' %}" alt="Djangle" id="logo-title">
                     </a>
