--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
         </div>
     </ul>
 
-    <div class="content">
+    <div class="container">
         {% block body %}{% endblock %}
     </div>
 
