added registration view, minor changes to login view

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,7 +20,7 @@
             {% else %}
                 <input type="hidden" name="next" value={% url 'main_page' %} />
             {% endif %}
-            <input type="submit" value="login" />
+            <input type="submit" value="Login" />
         </form>
     </section>
 {% endblock %}
