--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 {% if request.user.is_authenticated %}
                     <a href='{% url 'profile' %}' id="auth">{{ request.user.username }}</a> | <a href='{% url 'logout' %}' id="auth">Logout</a>
                 {% else %}
-                    <a href='{% url 'login' %}' id="auth">Login</a>
+                    <a href='{% url 'register' %}' id="auth">Sign Up</a> | <a href='{% url 'login' %}' id="auth">Login</a>
                 {% endif %}
             </div>
         </div>
