--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,15 @@
             </div>
             <div id="header-right">
                 {% if request.user.is_authenticated %}
-                    <a href='{% url 'profile' %}' id="auth">{{ request.user.username }}</a> | <a href='{% url 'logout' %}' id="auth">Logout</a>
+                    <!--Temporary Admin link -->
+                    {% if request.user.is_superuser %}
+                        <a href='/admin' id="auth">{{ request.user.username }}</a> | <a href='{% url 'logout' %}' id="auth">Logout</a>
+                    {% else %}
+                    <!--  Not temporary section -->
+                        <a href='{% url 'profile' %}' id="auth">{{ request.user.username }}</a> | <a href='{% url 'logout' %}' id="auth">Logout</a>
+                    <!-- Temporary closure -->
+                    {% endif %}
+                    <!-- End of temporary section-->
                 {% else %}
                     <a href='{% url 'register' %}' id="auth">Sign Up</a> | <a href='{% url 'login' %}' id="auth">Login</a>
                 {% endif %}
