--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -1,4 +1,4 @@
-{%  extends 'base.html' %}
+{%  extends 'forum/base.html' %}
 {% load staticfiles %}
 {%  block titlesection %}- Forum{%  endblock %}
 {% block head %}
