--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
-
+{% block subtitle %}Forum{%  endblock %}
 {% block menu %}
     {% if user.is_authenticated %}
         <li><a href='{% url 'forum:index' %}'>New Thread</a></li>
     {% endif %}
 {% endblock %}
+
