--- a/djangle/static/djangle/style.css
+++ b/djangle/static/djangle/style.css
@@ -142,8 +142,6 @@ header {
 
 /*=NAVBAR----------------*/
 .navbar{
-    min-height:10px;
-    margin-bottom:20px;
     border:0px;
     background-color:#ff9900;
 }
@@ -153,41 +151,31 @@ header {
     }
 }
 
-.navbar-forum .navbar-nav>li>a{
-    text-decoration: none;
+.navbar-djangle, .navbar-nav>li>a{
 	color:#fff;
     text-shadow: 0px 0px 2px #000;
-    background-color:transparent;
 }
 
-.navbar-forum .navbar-nav>li>a:hover{
+.navbar-djangle .navbar-nav>li>a:hover{
     color:#ff9900;
 	background: #fff;
     text-shadow: none;
 }
 
-
-.navbar-forum .navbar-brand-forum:focus,.navbar-forum .navbar-brand-forum:hover{
-	color:#fff;
-    font-weight: normal;
-}
-
-.navbar-forum{
-	background-color:#ff9900;
-}
-
-.navbar-brand-forum{
+.navbar-link:link, .navbar-link:visited, .navbar-link:hover{
     float:left;
     height:50px;
     padding:15px 15px;
     font-size:18px;
     line-height:20px;
+    color:#fff;
+    font-weight: normal;
+    text-decoration: none;
 }
 
-.navbar-forum .navbar-brand-forum{
-    text-decoration: none;
-	color:#fff;
-    text-shadow: 0px 0px 2px #000;
+.icon-bar{
+    background-color: #ffffff;
+    box-shadow: 0px 0px 2px #000;
 }
 
 #auth:visited, #auth:link {
