--- a/forum/static/forum/style.css
+++ b/forum/static/forum/style.css
@@ -13,6 +13,15 @@
     background-color: #ffd75a;
 }
 
+.pagination>.active>a{
+    background-color: #ff9900;
+    border-color: #ff9900;
+}
+
+.pagination>li>a{
+    color: #ff9900;
+}
+
 .well{
     border:0;
 }
@@ -25,10 +34,37 @@
     color: #008000;
 }
 
+#pos_badge{
+    background-color: #008800;
+}
+
 #neg_votes{
     color: #CC0000;
 }
 
+#neg_badge{
+    background-color: #CC0000;
+}
+
 #last{
     width: 20%;
+}
+
+#user-details{
+    margin-bottom: 20px;
+    color:#666;
+}
+
+#user-details>a{
+    color:#666;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+.img-thumbnail{
+    margin-bottom: 10px;
+}
+
+.glyphicon{
+    margin: 5px auto;
 }
