--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 <html>
 <head>
     <meta http-equiv="content-Type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'djangle/style.css' %}" />
     <link rel="shortcut icon" type="image/png" href="{% static 'djangle/images/favicon.ico' %}"/>
@@ -39,12 +40,17 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-forum">
+    <nav class="navbar navbar-djangle">
         <div class="container">
-            <div>
-                 <div class="navbar-header">
-                     <a class="navbar-brand-forum">{% block subtitle %}{% endblock %}</a>
-                 </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">{% block subtitle %}{% endblock %}</a>
+            </div>
+            <div class="collapse navbar-collapse" id="menuNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     {% block menu %}{% endblock %}
                 </ul>
@@ -56,6 +62,7 @@
         {% block body %}{% endblock %}
     </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
