--- a/forum/templates/forum/thread.html
+++ b/forum/templates/forum/thread.html
@@ -1,5 +1,6 @@
 {%  extends 'forum/base.html' %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 {%  block titlesection %}- {{ thread }}{%  endblock %}
 {% block head %}
     <link rel="stylesheet" type="text/css" href='{% static 'forum/style.css' %}' />
@@ -17,7 +18,7 @@
                 <div class="panel-body">
                  <div class="row">
                      <div class="col-sm-9">
-                         {{ post.message }}
+                         {{ post.message|linebreaksbr }}
                      </div>
                      <div class="col-sm-3 post_detail">
                          {{ post.author }}<br/>
@@ -27,7 +28,19 @@
                  </div>
                 </div>
             </div>
-        {% endfor %}
+    {% endfor %}
+
+    {% if posts.number == posts.paginator.num_pages %}
+        <section>
+            <form method="post">
+                {% csrf_token %}
+            <table id="message">
+                {{ form|crispy }}
+            </table>
+                <input type="submit" value="Post" class="btn btn-default" />
+            </form>
+        </section>
+    {% endif %}
 
     {% if posts.has_other_pages %}
         <div class="row text-center">
