--- a/djangle/static/djangle/style.css
+++ b/djangle/static/djangle/style.css
@@ -162,7 +162,7 @@ header {
     text-shadow: none;
 }
 
-.navbar-link:link, .navbar-link:visited, .navbar-link:hover{
+.navbar-link:link, .navbar-link:visited, .navbar-link:hover, .navbar-brand{
     float:left;
     height:50px;
     padding:15px 15px;
