--- a/forum/templates/forum/create.html
+++ b/forum/templates/forum/create.html
@@ -10,9 +10,11 @@
         <form method="post">
             {% csrf_token %}
             <table id="board">
-                {{ form|crispy }}
+                {% for form in forms %}
+                    {{ form|crispy }}
+                {% endfor %}
             </table>
-                <input type="submit" value="Post" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </form>
         </section>
 {% endblock %}
